--- a/index.html
+++ b/index.html
@@ -894,24 +894,31 @@ var spbcPublic = {"_ajax_nonce":"f36937c23e","_rest_nonce":"19d3ed62ef","_ajax_u
 <p style="color: #ffffff;">The Global Forum is an open platform where members participate on an equal footing. It aims to broaden its membership and is open to all steel-producing economies committed to pursuing its mission.</p>
 <p style="color: #ffffff;">The GFSEC is facilitated by the OECD, which provides technical, analytical and meeting assistance to support the Global Forum, its steering group and chairmanship.</p></div>
 			</div>
-			</div><div class="chart">
-    <iframe src="https://oecdch.art/958be0df64"></iframe>
-</div>
+			</div><div class="et_pb_column et_pb_column_1_3 et_pb_column_7 et_pb_css_mix_blend_mode_passthrough et-last-child">
+        <div class="et_pb_module et_pb_image et_pb_image_3">
+            <span class="et_pb_image_wrap">
+                <iframe src="https://oecdch.art/958be0df64" width="622" height="853" frameborder="0" allowfullscreen></iframe>
+            </span>
+        </div>
+    </div>
 
 <style>
-    .chart {
-        width: 200px;
-        height: 350px;
-        margin: auto;
-        text-align: center;
+    .container {
+        display: flex;
+        align-items: flex-start;
     }
-    .chart iframe {
+    .content {
+        flex: 1;
+    }
+    .et_pb_column {
+        margin-left: 20px; /* 必要に応じて余白を調整 */
+    }
+    .et_pb_image_wrap iframe {
         width: 100%;
         height: 100%;
         border: none;
     }
 </style>
-
 			</div>
 				
 				
