--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@ var spbcPublic = {"_ajax_nonce":"f36937c23e","_rest_nonce":"19d3ed62ef","_ajax_u
 <li class="et_pb_menu_page_id-202 menu-item menu-item-type-custom menu-item-object-custom menu-item-202"><a href="#areas-of-work" style="color: #ffffff;">Areas of work</a></li>
 <li class="et_pb_menu_page_id-203 menu-item menu-item-type-custom menu-item-object-custom menu-item-203"><a href="#member-countries" style="color: #ffffff;">Members</a></li>
 <li class="et_pb_menu_page_id-241 menu-item menu-item-type-custom menu-item-object-custom menu-item-241"><a href="#interim-secretariat">Data/(Log In)</a></li>
-<li class="et_pb_menu_page_id-1928 menu-item menu-item-type-custom menu-item-object-custom menu-item-1928"><a href="#key_documents" style="color: #ffffff;">Key Documents</a></li>
+<li class="et_pb_menu_page_id-1928 menu-item menu-item-type-custom menu-item-object-custom menu-item-1928"><a href="#key_documents" style="color: #ffffff;">Research</a></li>
 <li class="et_pb_menu_page_id-535 menu-item menu-item-type-custom menu-item-object-custom menu-item-535"><a href="#events" style="color: #ffffff;">News &amp; Events</a></li>
 </ul></nav>
 							</div>
@@ -669,7 +669,7 @@ var spbcPublic = {"_ajax_nonce":"f36937c23e","_rest_nonce":"19d3ed62ef","_ajax_u
 <li class="et_pb_menu_page_id-202 menu-item menu-item-type-custom menu-item-object-custom menu-item-202"><a href="#areas-of-work">Areas of work</a></li>
 <li class="et_pb_menu_page_id-203 menu-item menu-item-type-custom menu-item-object-custom menu-item-203"><a href="#member-countries">Members</a></li>
 <li class="et_pb_menu_page_id-241 menu-item menu-item-type-custom menu-item-object-custom menu-item-241"><a href="#interim-secretariat">Data/(Log In)</a></li>
-<li class="et_pb_menu_page_id-1928 menu-item menu-item-type-custom menu-item-object-custom menu-item-1928"><a href="#key_documents">Key Documents</a></li>
+<li class="et_pb_menu_page_id-1928 menu-item menu-item-type-custom menu-item-object-custom menu-item-1928"><a href="#key_documents">Research</a></li>
 <li class="et_pb_menu_page_id-535 menu-item menu-item-type-custom menu-item-object-custom menu-item-535"><a href="#events">News &amp; Events</a></li>
 </ul></div>
 			</div>
@@ -717,7 +717,7 @@ var spbcPublic = {"_ajax_nonce":"f36937c23e","_rest_nonce":"19d3ed62ef","_ajax_u
 <li class="et_pb_menu_page_id-202 menu-item menu-item-type-custom menu-item-object-custom menu-item-202"><a href="#areas-of-work">Areas of work</a></li>
 <li class="et_pb_menu_page_id-203 menu-item menu-item-type-custom menu-item-object-custom menu-item-203"><a href="#member-countries">Members</a></li>
 <li class="et_pb_menu_page_id-241 menu-item menu-item-type-custom menu-item-object-custom menu-item-241"><a href="#interim-secretariat">Data/(Log In)</a></li>
-<li class="et_pb_menu_page_id-1928 menu-item menu-item-type-custom menu-item-object-custom menu-item-1928"><a href="#key_documents">Key Documents</a></li>
+<li class="et_pb_menu_page_id-1928 menu-item menu-item-type-custom menu-item-object-custom menu-item-1928"><a href="#key_documents">Research</a></li>
 <li class="et_pb_menu_page_id-535 menu-item menu-item-type-custom menu-item-object-custom menu-item-535"><a href="#events">News &amp; Events</a></li>
 </ul></nav>
 							</div>
@@ -730,7 +730,7 @@ var spbcPublic = {"_ajax_nonce":"f36937c23e","_rest_nonce":"19d3ed62ef","_ajax_u
 <li class="et_pb_menu_page_id-202 menu-item menu-item-type-custom menu-item-object-custom menu-item-202"><a href="#areas-of-work">Areas of work</a></li>
 <li class="et_pb_menu_page_id-203 menu-item menu-item-type-custom menu-item-object-custom menu-item-203"><a href="#member-countries">Members</a></li>
 <li class="et_pb_menu_page_id-241 menu-item menu-item-type-custom menu-item-object-custom menu-item-241"><a href="#interim-secretariat">Data/(Log In)</a></li>
-<li class="et_pb_menu_page_id-1928 menu-item menu-item-type-custom menu-item-object-custom menu-item-1928"><a href="#key_documents">Key Documents</a></li>
+<li class="et_pb_menu_page_id-1928 menu-item menu-item-type-custom menu-item-object-custom menu-item-1928"><a href="#key_documents">Research</a></li>
 <li class="et_pb_menu_page_id-535 menu-item menu-item-type-custom menu-item-object-custom menu-item-535"><a href="#events">News &amp; Events</a></li>
 </ul></div>
 			</div>
@@ -2589,7 +2589,7 @@ var spbcPublic = {"_ajax_nonce":"f36937c23e","_rest_nonce":"19d3ed62ef","_ajax_u
 <li class="et_pb_menu_page_id-202 menu-item menu-item-type-custom menu-item-object-custom menu-item-202"><a href="#areas-of-work">Areas of work</a></li>
 <li class="et_pb_menu_page_id-203 menu-item menu-item-type-custom menu-item-object-custom menu-item-203"><a href="#member-countries">Members</a></li>
 <li class="et_pb_menu_page_id-241 menu-item menu-item-type-custom menu-item-object-custom menu-item-241"><a href="#interim-secretariat">Data/(Log In)</a></li>
-<li class="et_pb_menu_page_id-1928 menu-item menu-item-type-custom menu-item-object-custom menu-item-1928"><a href="#key_documents">Key Documents</a></li>
+<li class="et_pb_menu_page_id-1928 menu-item menu-item-type-custom menu-item-object-custom menu-item-1928"><a href="#key_documents">Research</a></li>
 <li class="et_pb_menu_page_id-535 menu-item menu-item-type-custom menu-item-object-custom menu-item-535"><a href="#events">News &amp; Events</a></li>
 </ul></nav>
 							</div>
@@ -2602,7 +2602,7 @@ var spbcPublic = {"_ajax_nonce":"f36937c23e","_rest_nonce":"19d3ed62ef","_ajax_u
 <li class="et_pb_menu_page_id-202 menu-item menu-item-type-custom menu-item-object-custom menu-item-202"><a href="#areas-of-work">Areas of work</a></li>
 <li class="et_pb_menu_page_id-203 menu-item menu-item-type-custom menu-item-object-custom menu-item-203"><a href="#member-countries">Members</a></li>
 <li class="et_pb_menu_page_id-241 menu-item menu-item-type-custom menu-item-object-custom menu-item-241"><a href="#interim-secretariat">Data/(Log In)</a></li>
-<li class="et_pb_menu_page_id-1928 menu-item menu-item-type-custom menu-item-object-custom menu-item-1928"><a href="#key_documents">Key Documents</a></li>
+<li class="et_pb_menu_page_id-1928 menu-item menu-item-type-custom menu-item-object-custom menu-item-1928"><a href="#key_documents">Research</a></li>
 <li class="et_pb_menu_page_id-535 menu-item menu-item-type-custom menu-item-object-custom menu-item-535"><a href="#events">News &amp; Events</a></li>
 </ul></div>
 			</div>
